--- a/localite/package.json
+++ b/localite/package.json
@@ -13,10 +13,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
