--- a/localite/package.json
+++ b/localite/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
